community center edit: changed the order of our function parameters to align with the rest of the codebase
